# skupina_Brdicka_Kulisek

./: CMakeLists.txt  README.md  main.cpp
Main/: CMakeLists.txt  Ferrari.cpp  Ferrari.h  Formule.cpp  Formule.h  McLaren.cpp  McLaren.h  Mercedes.cpp  Mercedes.h  README.md  RedBull.cpp  RedBull.h  build_and_run.sh  main.cpp
untitled/: CMakeLists.txt  main.cpp
